// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PodcastList > matches the snapshot 1`] = `
"<div class="column centerAll noMediaMessage">
  <phapplepodcastslogo size="50"></phapplepodcastslogo>
  <p>No episodes found.</p>
</div>"
`;

exports[`PodcastList > when podcastEpisodes prop is not an empty array > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Episodes</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <div class="dropdown fade-enter-from fade-enter-active">
          <ul>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Delete episode </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Download episode </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Episode description </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to playlist </span>
              </button></li>
            <li class="divider" aria-hidden="true"></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to queue </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Play Episode </span>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastList > when podcastEpisodes prop is not an empty array > when episode is downloaded > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Episodes</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <div class="dropdown fade-enter-from fade-enter-active">
          <ul>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Delete episode </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Download episode </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Episode description </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to playlist </span>
              </button></li>
            <li class="divider" aria-hidden="true"></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to queue </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Play Episode </span>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastList > when podcastEpisodes prop is not an empty array > when episode is not downloaded > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Episodes</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper downloadPodcastEpisode">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div><button class="centerItems buttonLink overlap buttonLink overlap buttonLink" type="button" title="Download episode">
            <phdownload class="icon" aria-hidden="true" size="24" weight="regular"></phdownload><span class="clamp text visuallyHidden"> Download episode </span>
          </button>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <p class="clamp2">description</p>
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems"><button class="centerItems buttonLink" type="button" title="Download episode">
            <phdownload class="icon" aria-hidden="true" size="24" weight="regular"></phdownload><span class="clamp text visuallyHidden"> Download episode </span>
          </button><button class="centerItems buttonLink" type="button" title="Episode information">
            <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button></div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <div class="dropdown fade-enter-from fade-enter-active">
          <ul>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Download episode </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Episode description </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to playlist </span>
              </button></li>
            <li class="divider" aria-hidden="true"></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to queue </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Play Episode </span>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastList > when podcastEpisodes prop is not an empty array > when the episode has no description > matches the snapshot 1`] = `
"<div class="trackTable">
  <div class="trackHeader">
    <div class="trackCell">Episodes</div>
    <div class="trackCell trackOptions"></div>
  </div>
  <div data-test-id="track" class="trackRow trackBorder spaceBetween">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper trackPlayPause large withImage">
          <div class="centerAll preloadImage overlap"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
          <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton globalLink buttonLink centerAll themeHoverButton globalLink buttonLink" type="button">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
            </button></div>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <ph-check-circle-stub size="24"></ph-check-circle-stub>
          </div>
          <!--v-if-->
        </div>
        <div class="marqueeScroll" style="--animation-duration: 0ms;">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
          <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
        </button>
        <div class="dropdown fade-enter-from fade-enter-active">
          <ul>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Delete episode </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Download episode </span>
              </button></li>
            <!--v-if-->
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to playlist </span>
              </button></li>
            <li class="divider" aria-hidden="true"></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Add to queue </span>
              </button></li>
            <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                <!--v-if--><span class="clamp text"> Play Episode </span>
              </button></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
